--- a/star.css
+++ b/star.css
@@ -9,9 +9,9 @@ body {
 
 .header{
     background-color: #fff;
-    padding: 15px 20px;
+    padding: 1px 20px;
     border-bottom: 2px solid #eeeeee;
-    
+    height: 90px;
     
 }
 .menu-box{
